$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.92-2 (opened August 28, 2011)

	* MDSrotate: metaMDSrotate() was renamed to MDSrotate(), and
	metaMDSrotate() was .Deprecated. 
	
Version 1.92-1 (closed August 28, 2011)

	* adonis, betadisper, mrpp: check that dissimilarities are
	non-negative (small negative values are tolerated). The test was
	not added to meandist: there may be legitimate usages for
	correlation-like objects although summary.meandist() is
	invalid. The addition was triggered by a user who tried to analyse
	Chase et al. Raup-Crick values in the range -1 .. +1 in
	betadisper().

	* anosim: warn if some dissimilarities are negative. Function can
	handle negative dissimilarities because it is based on ranks, but
	probably this is a user error (but can be intentional and
	correct).

	* metaMDSrotate: can rotate monoMDS() results.

	* monoMDS: gained argument 'pc' (defaults TRUE) to rotate the
	final scores to principal components.

	* specaccum, fitspecaccum: gained predict() methods. With
	specaccum() predict(..., newdata) can estimate values for
	'newdata' with linear or spline interpolation if necessary.
	Without 'newdata' the function returns the the fitted expected
	richness.  With fitspecaccum(), the predict.nls() is performed to
	each fitted model. Function fitspecaccum() is written so that
	default fitted(), residuals() and coef() work.

	* specpool: failed if 'pool' had NA values or empty factor
	levels. Checks that 'pool' length matches nrow of data.

	* NAMESPACE: imports nobs from permute_0.5-3 in R 2.12.2 and older
	which do not yet have nobs() generic. Do not export orderingKM &
	ordimedian. Remove aliases to non-exported and non-documented
	print and print.summary methods in Rd files (but leave documented
	ones).

	* vegandocs: shows the permutation vignette of the 'permute'
	package. 
	
Version 1.92-0 (closed August 23, 2011)

	* open new version with the release of vegan_1.17-12 on August 17,
	2011. 
