@@ -161,7 +161,7 @@ Link function: identity
 
 Formula:
 y ~ poly(x1, 1) + poly(x2, 1)
-<environment: 0x102383db8>
+<environment: 0x1023e4308>
 Total model degrees of freedom 3 
 
 GCV score: 0.0427924
@@ -3656,6 +3656,9 @@ Call:
 monoMDS(dist = dis, model = "loc") 
 
 Local non-metric Multidimensional Scaling
+
+20 points, dissimilarity ‘bray’, call ‘vegdist(x = dune)’
+
 Dimensions: 2 
 Stress:     0.07596768 
 Stress type 1, weak ties
@@ -4727,7 +4730,7 @@ Link function: identity
 
 Formula:
 y ~ s(x1, x2, k = knots)
-<environment: 0x10684e8a0>
+<environment: 0x1069e28d8>
 
 Estimated degrees of freedom:
 6.4351  total = 7.435071 
@@ -4743,7 +4746,7 @@ Link function: identity
 
 Formula:
 y ~ s(x1, x2, k = knots)
-<environment: 0x1067b0430>
+<environment: 0x10605cca0>
 
 Estimated degrees of freedom:
 6.1039  total = 7.103853 
@@ -4899,7 +4902,7 @@ Link function: identity
 
 Formula:
 y ~ s(x1, x2, k = knots)
-<environment: 0x106c4c3f8>
+<environment: 0x104886878>
 
 Estimated degrees of freedom:
 8.9275  total = 9.927492 
@@ -4912,7 +4915,7 @@ Link function: identity
 
 Formula:
 y ~ s(x1, x2, k = knots)
-<environment: 0x1069610b0>
+<environment: 0x107ad10a8>
 
 Estimated degrees of freedom:
 7.7529  total = 8.75294 
@@ -4925,7 +4928,7 @@ Link function: identity
 
 Formula:
 y ~ s(x1, x2, k = knots)
-<environment: 0x106ba78b0>
+<environment: 0x1064e5600>
 
 Estimated degrees of freedom:
 8.8962  total = 9.89616 
@@ -7148,7 +7151,7 @@ Link function: identity
 
 Formula:
 y ~ s(x1, x2, k = knots)
-<environment: 0x106ea3c78>
+<environment: 0x10797bd08>
 
 Estimated degrees of freedom:
 2  total = 3 
@@ -7613,7 +7616,7 @@ Procrustes sum of squares:
 > ### * <FOOTER>
 > ###
 > cat("Time elapsed: ", proc.time() - get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  148.95 1.66 152.883 0 0 
+Time elapsed:  110.491 1.395 117.643 0 0 
 > grDevices::dev.off()
 null device 
           1 
